[package]
name = "sharded-counter"
version = "0.1.0"
edition = "2021"
description = "A fast and concurrent counter."
categories = ["algorithms"]
documentation = "https://docs.rs/sharded-counter/"
repository = "https://github.com/jerry73204/sharded-counter.git"
homepage = "https://github.com/jerry73204/sharded-counter"
readme = "README.md"
license = "MIT"

[dependencies]
once_cell = "1.13.0"

[dev-dependencies]
clap = { version = "3.2.16", features = ["derive"] }
itertools = "0.10.3"
